--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -20,6 +20,7 @@
         "@typescript-eslint"
     ],
     "rules": {
-        "indent": ["error", 2, 4]
+        "indent": ["error", 2, 4],
+        "semi": ["error", "always"]
     }
 }
