--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.3",
     "@types/react": "^18.0.25",
+    "@types/react-datetime-picker": "^3.4.1",
     "@types/react-dom": "^18.0.8",
     "axios": "^1.1.3",
     "firebase": "^9.14.0",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-date-picker": "^9.1.0",
+    "react-datetime-picker": "^4.1.1",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
