--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -22,6 +22,6 @@
     "rules": {
         "indent": ["error", 2, { "SwitchCase": 1 }],
         "semi": ["error", "always"],
-        "comma-dangle": ["error", "always"]
+        "comma-dangle": ["error", "always-multiline"]
     }
 }
