--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-datetime-picker": "^4.1.1",
     "react-dom": "^18.2.0",
     "react-google-autocomplete": "^2.7.0",
+    "react-hot-toast": "^2.4.0",
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
     "react-time-picker": "^5.1.0",
