--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/react-copy-to-clipboard": "^5.0.4",
     "@types/react-datetime-picker": "^3.4.1",
     "@types/react-dom": "^18.0.8",
+    "@types/react-modal": "^3.13.1",
     "axios": "^1.1.3",
     "firebase": "^9.14.0",
     "moment": "^2.29.4",
@@ -29,6 +30,7 @@
     "react-dom": "^18.2.0",
     "react-google-autocomplete": "^2.7.0",
     "react-hot-toast": "^2.4.0",
+    "react-modal": "^3.16.1",
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
     "react-time-picker": "^5.1.0",
