--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/react-datetime-picker": "^3.4.1",
     "@types/react-dom": "^18.0.8",
     "@types/react-modal": "^3.13.1",
+    "@types/uuid": "^9.0.0",
     "axios": "^1.1.3",
     "firebase": "^9.14.0",
     "moment": "^2.29.4",
@@ -36,6 +37,7 @@
     "react-time-picker": "^5.1.0",
     "typescript": "^4.8.4",
     "use-async-effect": "^2.2.7",
+    "uuid": "^9.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
